# Emu_Collection_Wasm

./: Makefile  README.md
docs/: index.html  index.js
docs/chip8/: chip8.js  chip8_bg.wasm
emulators/chip8/: Cargo.toml
emulators/chip8/src/: chip8.rs  lib.rs  utils.rs
emulators/gameboy/: Cargo.toml
emulators/gameboy/src/: cpu.rs  lib.rs  memory.rs  ppu.rs  utils.rs
web/: chip8Emu.js  gameboy.js  index.html  index.js
web/chip8/: chip8.js  chip8_bg.wasm
