[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d", "console", "MouseEvent", "KeyboardEvent", "HtmlImageElement", "ImageData", "Performance"] }
wee_alloc = "0.4"  # Optional: Smaller allocator for WebAssembly
js-sys = "0.3"
lazy_static = "1.4.0"
getrandom = { version = "0.2", features = ["js"] }


[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z" # Optimize for binary size